# matrix-client

./: Cargo.toml
src/: login.rs  main.rs  persist_session.rs  sync.rs
src/login/: input_popup.rs  login_new.rs  mod.rs  persist_session.rs
src/ui_elements/: chat.rs  info_popup.rs  input_popup.rs  mod.rs
